# 42_A-Maze-Ing

./: .gitignore  Algo.py  Makefile  README.md  a_maze_ing.py  affichage.py  config.txt  generator.py  main.py  map2.py  output_maze.txt  pyproject.toml
mazegen/: README.md  __init__.py  map2.py  solver.py
