[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generator and solver with 42 pattern support"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rich",
]

[project.optional-dependencies]
dev = ["flake8", "mypy", "build"]

[tool.setuptools.packages.find]
include = ["mazegen*"]
